Fixed challenges, needs testing

--- a/static/common/template/foot.html
+++ b/static/common/template/foot.html
@@ -1,6 +1,6 @@
         </main>
         <footer>
-            <div class="foot-note"><a href="https://ctf.sheltoncyril.io">Back to challenge site</a></div>
+            <div class="foot-note"><a href="https://ctf.thundrcloud.net/challenges">Back to challenge site</a></div>
         </footer>
     </div>
 </body>
